--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Helloo course era</title>
 </head>
 <body>
-<h1>hiiii course era</h1>
+<h1>hiiii course era...blaaaaaaaaaaaah</h1>
 </body>
 </html>
