--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Helloo course era</title>
+	<title>Course era</title>
+	<style>
+	h1 {
+		font-size: 21px;
+		font-family: arial ;
+		color:#0000ff;
+		font-weight: bold;
+		text-transform: italic;
+		text-align: center; 
+
+
+	}
+	</style>
 </head>
 <body>
-<h1>hiiii course era...blaaaaaaaaaaaah</h1>
+<h1>Course era..</h1>
 </body>
 </html>
